package ucf.assignments;

import java.util.ArrayList;

public class InventoryList {
    ArrayList<Item> items = new ArrayList<Item>(); // list of items in the inventory
}
